chore: include description parameter on products list (#9)
* chore: include description parameter on products list

* fix: remove comments

* chore: adjust products query  returning category name

* fix: remove toLowerCase from list products query

* refactor: rebase
